--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,178 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Rubik", sans-serif;
+  background: rgb(248, 242, 242);
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.navbar {
+  background: rgb(248, 242, 242);
+}
+
+.navbar-brand {
+  font-size: 1.9rem !important;
+  color: #565387 !important;
+}
+
+.navbar a {
+  font-size: 1.3rem;
+  text-transform: capitalize;
+}
+
+.navbar a:hover {
+  color: #565387 !important;
+}
+
+.menu_active {
+  font-weight: 400;
+  width: fit-content;
+  border-bottom: 1px solid #565387;
+  padding-bottom: 0 !important;
+}
+
+/* .......................................................... */
+img.vert-move {
+  -webkit-animation: mover 1s infinite alternate;
+  animation: mover 1s infinite alternate;
+}
+img.vert-move {
+  -webkit-animation: mover 1s infinite alternate;
+  animation: mover 1s infinite alternate;
+}
+@-webkit-keyframes mover {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
+}
+@keyframes mover {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
+}
+/* .......................................................... */
+/* .hero-tx-out{
+  margin-top: -500px !important;
+} */
+
+.hero_img {
+  margin-top: 20px;
+  margin-left: 80px;
+  /* margin-bottom: -180px; */
+}
+
+#header {
+  margin-top: 60px;
+}
+
+#header .btn-get-started {
+  font-weight: 500;
+  font-size: 20px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 10px 30px;
+  border-radius: 50px;
+  transition: 0.3s;
+  color: #6c63ff;
+  border: 2px solid #6c63ff;
+  text-decoration: none;
+}
+#header .btn-get-started:hover {
+  background: #6c63ff;
+  color: #fff;
+}
+
+.card-img-top {
+  height: 200px;
+  width: 100%;
+}
+
+.card-btn {
+  font-weight: 500;
+  font-size: 13px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 5px 10px;
+  border-radius: 20px;
+  transition: 0.3s;
+  color: #fff;
+  background: #6c63ff;
+  border: 2px solid #6c63ff;
+  text-decoration: none;
+}
+.card-btn:hover {
+  background: #fff;
+  color: #6c63ff;
+}
+
+.card-img-top:hover{
+  transition: filter 0.2s ease-in-out;
+  filter: blur(5px) !important;
+}
+
+.form-control{
+  border-radius: 7px !important;
+}
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+/* Responsive code */
+
+@media (max-width: 991px) {
+  #header{
+    height: 130vh;
+    text-align: center;
+  }
+  #header .hero_img{
+    text-align: center;
+  }
+  #header .hero_img img{
+    width: 100%;
+  }
+}
+
+@media (max-width: 768px)
+{
+  #header{
+    margin-top: 20px;
+  }
+  #header h1{
+    font-size: 28px;
+  }
+  #header h2{
+    font-size: 18px;
+    margin-bottom: 45px;
+  }
+  #header .hero_img img{
+    /* Not Working , Find the Bug */
+    width: 50%; 
+  }
+  .hero_img{
+    margin-left: -50px;
+    margin-top: 50px;
+  }
 }
